syntax = "proto3";
option java_multiple_files = true;
package com.ros.control.server;

service Persistor {
    rpc saveConfig (PersistRequest) returns (PersistReply); 
}

message PersistRequest {
    int32 port = 1;
    string hostname = 2;
    string username = 3;
    string password = 4;
}

message PersistReply {
    string message = 1;
}